--- a/index_list/group_final_shoppingchar.html
+++ b/index_list/group_final_shoppingchar.html
@@ -53,33 +53,34 @@
                         <tbody>
                             <tr class="tr_title">
                                 <td colspan="7">
-                                    <h5>餐廳名稱</h5>
+                                    <h5>aqua水相餐廳</h5>
                                 </td>
                             </tr>
 
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
-                                    <span id="ordername" class="ordername">餐點名</span>
+                                    <span id="ordername" class="ordername">西西里海鹽柴魚脆薯</span>
                                 </td>
                                 <td>
-                                    <span>$123</span>
+                                    <span>$188</span>
                                 </td>
                                 <td>
 
                                     <span class="qty-squre">
                                         <input id="qtyminus" type="button" value="-" class="qty-btn">
-                                        <input type="text" value="1" class="qty" name="quantity">
+                                        <input type="text" value="2" class="qty" name="quantity">
                                         <input id="qtyplus" type="button" value="+" class="qty-btn">
                                     </span>
                                 </td>
                                 <td>
-                                    <span>$1234</span>
+                                    <span>$376</span>
                                 </td>
                                 <td class="delete-shopping">
                                     <span>刪除</span>
@@ -87,26 +88,27 @@
                             </tr>
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail" alt="">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
-                                    <span id="ordername" class="ordername">餐點名</span>
+                                    <span id="ordername" class="ordername">番茄羅勒起司搭頂級陳年油醋</span>
                                 </td>
                                 <td>
-                                    <span>$123</span>
+                                    <span>$188</span>
                                 </td>
                                 <td>
                                     <span class="qty-squre">
                                         <input id="qtyminus" type="button" value="-" class="qty-btn">
-                                        <input type="text" value="1" class="qty" name="quantity">
+                                        <input type="text" value="2" class="qty" name="quantity">
                                         <input id="qtyplus" type="button" value="+" class="qty-btn">
                                     </span>
                                 </td>
                                 <td>
-                                    <span>$1234</span>
+                                    <span>$376</span>
                                 </td>
                                 <td class="delete-shopping">
                                     <span>刪除</span>
@@ -115,16 +117,17 @@
 
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail" alt="">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
-                                    <span id="ordername" class="ordername">餐點名</span>
+                                    <span id="ordername" class="ordername">南義炸起司條</span>
                                 </td>
                                 <td>
-                                    <span>$123</span>
+                                    <span>$288</span>
                                 </td>
                                 <td>
                                     <span class="qty-squre">
@@ -134,7 +137,7 @@
                                     </span>
                                 </td>
                                 <td>
-                                    <span>$1234</span>
+                                    <span>$288</span>
                                 </td>
                                 <td class="delete-shopping">
                                     <span>刪除</span>
@@ -144,16 +147,18 @@
 
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
-                                    <span id="ordername" class="ordername">餐點名</span>
+                                    <span id="ordername" class="ordername">水相主廚私房湯品
+                                    </span>
                                 </td>
                                 <td>
-                                    <span>$123</span>
+                                    <span>$288</span>
                                 </td>
                                 <td>
 
@@ -164,7 +169,37 @@
                                     </span>
                                 </td>
                                 <td>
-                                    <span>$1234</span>
+                                    <span>$288</span>
+                                </td>
+                                <td class="delete-shopping">
+                                    <span>刪除</span>
+                                </td>
+                            </tr>
+                            <tr class="shopping-row" id="shopping-row">
+                                <td>
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
+                                </td>
+                                <td class="wrapper">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
+                                </td>
+                                <td>
+                                    <span id="ordername" class="ordername">田園香橙鮮蝦蘿蔓鮮蔬
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>$318</span>
+                                </td>
+                                <td>
+
+                                    <span class="qty-squre">
+                                        <input id="qtyminus" type="button" value="-" class="qty-btn">
+                                        <input type="text" value="1" class="qty" name="quantity">
+                                        <input id="qtyplus" type="button" value="+" class="qty-btn">
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>$318</span>
                                 </td>
                                 <td class="delete-shopping">
                                     <span>刪除</span>
@@ -179,9 +214,30 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
+                                    </div>
+                                    <div class="mobile_shopping_text">
+                                        <span class="mobile_span">$123</span>
+                                        <span class="qty-squre">
+                                            <input id="qtyminus" type="button" value="-" class="qty-btn">
+                                            <input type="text" value="1" class="qty" name="quantity">
+                                            <input id="qtyplus" type="button" value="+" class="qty-btn">
+                                        </span>
+                                        <span class="mobile_span">總額:$1234</span>
+                                    </div>
+                                    <div class="mobile_delete">
+                                        <button>刪除</button>
+                                    </div>
+                                </div>
+                                <div class="mobile_shopping_div">
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
+                                    <div class="mobile_shopping_img">
+                                        <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -198,9 +254,11 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -217,9 +275,11 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -236,28 +296,11 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
-                                    </div>
-                                    <div class="mobile_shopping_text">
-                                        <span class="mobile_span">餐點名</span>
-                                        <span class="mobile_span">$123</span>
-                                        <span class="qty-squre">
-                                            <input id="qtyminus" type="button" value="-" class="qty-btn">
-                                            <input type="text" value="1" class="qty" name="quantity">
-                                            <input id="qtyplus" type="button" value="+" class="qty-btn">
-                                        </span>
-                                        <span class="mobile_span">總額:$1234</span>
-                                    </div>
-                                    <div class="mobile_delete">
-                                        <button>刪除</button>
-                                    </div>
-                                </div>
-                                <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
-                                    <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -285,7 +328,7 @@
                         <span class="media-body">全選</span>
                     </label>
                     <p>
-                        <b>總金額(3個商品)$1234</b>
+                        <b>總金額(7個商品)NT$ 1,646</b>
                     </p>
                     <a href="group_final_shoppingok.html">
                         <button class="buy-btn">
@@ -310,7 +353,7 @@
         function btn_shoppingok() {
             window.location.href = 'group_final_shoppingok.html';
         }
-        
+
         // $('input').change(function () {
         //     $(`input[name='${this.id}']`).prop('checked', this.checked);
 
@@ -319,6 +362,14 @@
         //             $(`input[name='${this.name}']`).length ==
         //             $(`input[name='${this.name}']:checked`).length)
         // })
+        $("input").prop("checked", true);
+        $('input').change(function () {
+            $(`input[name='${this.id}']`).prop('checked', this.checked);
+            $(`input[id='${this.name}']`)
+                .prop('checked',
+                    $(`input[name='${this.name}']`).length ==
+                    $(`input[name='${this.name}']:checked`).length)
+        })
     </script>
 
 </body>
