--- a/index_list/group_final_shoppingok.html
+++ b/index_list/group_final_shoppingok.html
@@ -62,44 +62,42 @@
                             <!-- 餐點顯示欄位 -->
                             <tr class="shopping-row" id="shopping-row">
                                 <td class="wrapper" id="td-1" style="width: 200px;">
-                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
-                                        alt="">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
                                     <span id="ordername" class="ordername">
-                                        餐點名
+                                        西西里海鹽柴魚脆薯
                                     </span>
                                 </td>
                                 <td>
                                     <span>
-                                        $123
+                                        $188
                                     </span>
                                 </td>
                                 <td>
                                     <span>
-                                        1
+                                        2
                                     </span>
                                 </td>
                                 <td>
                                     <span>
-                                        $1234
+                                        $376
                                     </span>
                                 </td>
                             </tr>
                             <!-- end of 餐點顯示欄位 -->
                             <tr class="shopping-row" id="shopping-row">
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail"
-                                        alt="">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
                                     <span id="ordername" class="ordername">
-                                        餐點名
+                                        番茄羅勒起司搭頂級陳年油醋
                                     </span>
                                 </td>
                                 <td>
                                     <span>
-                                        $123
+                                        $188
                                     </span>
                                 </td>
                                 <td>
@@ -109,7 +107,82 @@
                                 </td>
                                 <td>
                                     <span>
-                                        $1234
+                                        $376
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr class="shopping-row" id="shopping-row">
+                                <td class="wrapper">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
+                                </td>
+                                <td>
+                                    <span id="ordername" class="ordername">
+                                        南義炸起司條
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        $288
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        1
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        $288
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr class="shopping-row" id="shopping-row">
+                                <td class="wrapper">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
+                                </td>
+                                <td>
+                                    <span id="ordername" class="ordername">
+                                        水相主廚私房湯品
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        $288
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        1
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        $288
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr class="shopping-row" id="shopping-row">
+                                <td class="wrapper">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
+                                </td>
+                                <td>
+                                    <span id="ordername" class="ordername">
+                                        田園香橙鮮蝦蘿蔓鮮蔬
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        $318
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        1
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        $318
                                     </span>
                                 </td>
                             </tr>
@@ -198,7 +271,7 @@
                 <div class="all-squre" id="all-squre">
                     <button id="buy-back-btn">回上一步</button>
                     <p>
-                        <b>總金額(3個商品)$1234</b>
+                        <b>總金額(7個商品)NT$ 1,646</b>
                     </p>
                     <button id="buy-ok-btn" onclick="btn_orderfinished()">下訂單</button>
                 </div>
