--- a/index_list/index.html
+++ b/index_list/index.html
@@ -49,8 +49,8 @@
                         <input class="search_keyword" id="keyword" type="text" placeholder="請輸入餐廳關鍵字">
                         <div class="area_div">
                             <input type="checkbox" class="area_btn" id="area_btn">
-                            <label for="area_btn" class="area_label dropdown_label"><i class="fas fa-map-marker-alt"></i>請選擇地區<i
-                                        class="fas fa-sort-down"></i></label>
+                            <label for="area_btn" class="area_label dropdown_label"><i
+                                    class="fas fa-map-marker-alt"></i>請選擇地區<i class="fas fa-sort-down"></i></label>
 
                             <div class="tab_div dropdown_div">
                                 <div class="tab_css">
@@ -120,25 +120,29 @@
 
                         <div class="other_div">
                             <input type="checkbox" class="other_btn" id="other_btn">
-                            <label for="other_btn" class="other_label dropdown_label"><i class="fas fa-hand-point-up"></i>進階搜尋<i
-                                        class="fas fa-sort-down"></i></label>
+                            <label for="other_btn" class="other_label dropdown_label"><i
+                                    class="fas fa-hand-point-up"></i>進階搜尋<i class="fas fa-sort-down"></i></label>
 
                             <div class="chk_div dropdown_div">
                                 <div class="chk_css">
                                     <div class="chk_item">
-                                        <input class="chk_chk" type="checkbox" name="child_seats" id="child_seats" value="2">
+                                        <input class="chk_chk" type="checkbox" name="child_seats" id="child_seats"
+                                            value="2">
                                         <label for="child_seats">提供兒童座椅</label>
                                     </div>
                                     <div class="chk_item">
-                                        <input class="chk_chk" type="checkbox" name="barrier_free" id="barrier_free" value="2">
+                                        <input class="chk_chk" type="checkbox" name="barrier_free" id="barrier_free"
+                                            value="2">
                                         <label for="barrier_free">無障礙設施</label>
                                     </div>
                                     <div class="chk_item">
-                                        <input class="chk_chk" type="checkbox" name="min_consumption" id="min_consumption" value="2">
+                                        <input class="chk_chk" type="checkbox" name="min_consumption"
+                                            id="min_consumption" value="2">
                                         <label for="min_consumption">最低消費限制</label>
                                     </div>
                                     <div class="chk_item">
-                                        <input class="chk_chk" type="checkbox" name="limit_meal_time" id="limit_meal_time" value="2">
+                                        <input class="chk_chk" type="checkbox" name="limit_meal_time"
+                                            id="limit_meal_time" value="2">
                                         <label for="limit_meal_time">限制用餐時間</label>
                                     </div>
                                     <div class="chk_item">
@@ -146,7 +150,8 @@
                                         <label for="delivery">提供外送</label>
                                     </div>
                                     <div class="chk_item">
-                                        <input class="chk_chk" type="checkbox" name="service_free" id="service_free" value="2">
+                                        <input class="chk_chk" type="checkbox" name="service_free" id="service_free"
+                                            value="2">
                                         <label for="service_free">收取服務費</label>
                                     </div>
                                     <div class="chk_item">
@@ -154,7 +159,8 @@
                                         <label for="parking">附設停車場</label>
                                     </div>
                                     <div class="chk_item">
-                                        <input class="chk_chk" type="checkbox" name="allow_pets" id="allow_pets" value="2">
+                                        <input class="chk_chk" type="checkbox" name="allow_pets" id="allow_pets"
+                                            value="2">
                                         <label for="allow_pets">允許攜帶寵物</label>
                                     </div>
 
@@ -186,12 +192,14 @@
                                 </div>
                                 <input class="search_keyword" id="keyword" type="text" placeholder="請輸入餐廳關鍵字">
                                 <div class="area_div">
-                                    <label for="area_btn" onclick="open_tab('area')" class="area_label mobile_tab_label"><i class="fas fa-map-marker-alt"></i>請選擇地區<i
-                                        class="fas fa-sort-down"></i></label>
+                                    <label for="area_btn" onclick="open_tab('area')"
+                                        class="area_label mobile_tab_label"><i class="fas fa-map-marker-alt"></i>請選擇地區<i
+                                            class="fas fa-sort-down"></i></label>
                                 </div>
                                 <div class="other_div">
-                                    <label for="other_btn" onclick="open_tab('other')" class="other_label mobile_tab_label"><i class="fas fa-hand-point-up"></i>進階搜尋<i
-                                        class="fas fa-sort-down"></i></label>
+                                    <label for="other_btn" onclick="open_tab('other')"
+                                        class="other_label mobile_tab_label"><i class="fas fa-hand-point-up"></i>進階搜尋<i
+                                            class="fas fa-sort-down"></i></label>
                                 </div>
                                 <div class="dropdown">
                                     <button class="search_btn">搜尋</button>
@@ -259,37 +267,45 @@
                             <div id="other" class="mobile_tab_div">
                                 <div class="mobile_chk_css">
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="child_seats" id="child_seats" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="child_seats"
+                                            id="child_seats" value="2">
                                         <label for="child_seats">提供兒童座椅</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="barrier_free" id="barrier_free" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="barrier_free"
+                                            id="barrier_free" value="2">
                                         <label for="barrier_free">無障礙設施</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="min_consumption" id="min_consumption" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="min_consumption"
+                                            id="min_consumption" value="2">
                                         <label for="min_consumption">最低消費限制</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="limit_meal_time" id="limit_meal_time" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="limit_meal_time"
+                                            id="limit_meal_time" value="2">
                                         <label for="limit_meal_time">限制用餐時間</label>
                                     </div>
                                 </div>
                                 <div class="mobile_chk_css">
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="delivery" id="delivery" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="delivery" id="delivery"
+                                            value="2">
                                         <label for="delivery">提供外送</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="service_free" id="service_free" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="service_free"
+                                            id="service_free" value="2">
                                         <label for="service_free">收取服務費</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="parking" id="parking" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="parking" id="parking"
+                                            value="2">
                                         <label for="parking">附設停車場</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="allow_pets" id="allow_pets" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="allow_pets" id="allow_pets"
+                                            value="2">
                                         <label for="allow_pets">允許攜帶寵物</label>
                                     </div>
                                 </div>
@@ -385,9 +401,9 @@
     <!-- 快速搜尋塊 end -->
 
     <!-- 置頂鈕 start -->
-    <button type="button" class="ontop_btn" onclick="topfunction()">         
-        <i class="fas fa-arrow-up"></i>         
-        </button>
+    <button type="button" class="ontop_btn" onclick="topfunction()">
+        <i class="fas fa-arrow-up"></i>
+    </button>
     <!-- 置頂鈕 over -->
 
     <!-- 頁尾 start -->
@@ -398,39 +414,39 @@
 
 
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $(".footer_page").load("footer.html");
 
-            $(".dropdown_label").click(function(e) {
+            $(".dropdown_label").click(function (e) {
                 e.preventDefault();
                 $(this).parent().find(".dropdown_div").slideToggle();
                 $(this).parent().siblings().find(".dropdown_div").slideUp();
             });
 
-            $(".mobile_dropdown_label").click(function(e) {
+            $(".mobile_dropdown_label").click(function (e) {
                 e.preventDefault();
                 $(this).parent().find(".mobile_dropdown_div").slideToggle();
                 $(this).parent().siblings().find(".mobile_dropdown_div").slideUp();
             });
 
-            $(".tab_close,.chk_close").click(function() {
+            $(".tab_close,.chk_close").click(function () {
                 $(".dropdown_div").slideUp();
             });
 
-            $(".search_mobile_div").click(function() {
+            $(".search_mobile_div").click(function () {
                 $(".mobile_div").css("display", "unset");
             });
 
-            $(".turn_off").click(function() {
+            $(".turn_off").click(function () {
                 $(".mobile_div").css("display", "none");
             });
 
-            $(".mobile_tab_content span").click(function() {
+            $(".mobile_tab_content span").click(function () {
                 var text = $(this).text();
                 $(".area_label").html(`<i class="fas fa-map-marker-alt"></i>${text}`);
             });
 
-            $(".tab_content span").click(function() {
+            $(".tab_content span").click(function () {
                 var text = $(this).text();
                 $(".area_label").html(`<i class="fas fa-map-marker-alt"></i>${text}`);
             });
@@ -450,7 +466,7 @@
                 scrollTop: 0
             }, 300);
         }
-        $(window).scroll(function() {
+        $(window).scroll(function () {
             if ($(this).scrollTop() > 300) {
                 $(".ontop_btn").fadeIn(100);
             } else {
