--- a/index_list/group_shoppingchar.html
+++ b/index_list/group_shoppingchar.html
@@ -53,7 +53,7 @@
                         <tbody>
                             <tr class="tr_title">
                                 <td colspan="7">
-                                    <h5>餐廳名稱</h5>
+                                    <h5>aqua水相餐廳</h5>
                                 </td>
                             </tr>
 
@@ -63,14 +63,13 @@
                                         name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
-                                        alt="">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
-                                    <span id="ordername" class="ordername">餐點名</span>
+                                    <span id="ordername" class="ordername">西西里海鹽柴魚脆薯</span>
                                 </td>
                                 <td>
-                                    <span>$123</span>
+                                    <span>$188</span>
                                 </td>
                                 <td>
 
@@ -81,7 +80,7 @@
                                     </span>
                                 </td>
                                 <td>
-                                    <span>$1234</span>
+                                    <span>$188</span>
                                 </td>
                                 <td class="delete-shopping">
                                     <span>刪除</span>
@@ -93,14 +92,13 @@
                                         name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail"
-                                        alt="">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
-                                    <span id="ordername" class="ordername">餐點名</span>
+                                    <span id="ordername" class="ordername">南義炸起司條</span>
                                 </td>
                                 <td>
-                                    <span>$123</span>
+                                    <span>$288</span>
                                 </td>
                                 <td>
                                     <span class="qty-squre">
@@ -110,14 +108,14 @@
                                     </span>
                                 </td>
                                 <td>
-                                    <span>$1234</span>
+                                    <span>$288</span>
                                 </td>
                                 <td class="delete-shopping">
                                     <span>刪除</span>
                                 </td>
                             </tr>
 
-                            <tr class="shopping-row" id="shopping-row">
+                            <!-- <tr class="shopping-row" id="shopping-row">
                                 <td>
                                     <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
                                         name="shopping-checkbox" />
@@ -145,10 +143,10 @@
                                 <td class="delete-shopping">
                                     <span>刪除</span>
                                 </td>
-                            </tr>
+                            </tr> -->
 
 
-                            <tr class="shopping-row" id="shopping-row">
+                            <!-- <tr class="shopping-row" id="shopping-row">
                                 <td>
                                     <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
                                         name="shopping-checkbox" />
@@ -177,7 +175,7 @@
                                 <td class="delete-shopping">
                                     <span>刪除</span>
                                 </td>
-                            </tr>
+                            </tr> -->
                         </tbody>
                     </table>
                 </div>
@@ -303,7 +301,7 @@
                         <span class="media-body">全選</span>
                     </label>
                     <p>
-                        <b>總金額(3個商品)$1234</b>
+                        <b>總金額(2個商品)$476</b>
                     </p>
                     <button class="buy-btn" style="width: 300px;" onclick="btn_orderfinished()">
                         <b>送出訂單給團長</b>
@@ -318,7 +316,7 @@
     <!-- footer -->
 
     <script>
-        $(".header_page").load("header.html");
+        $(".header_page").load("header_groupmember.html");
         $(".footer_page").load("footer.html");
 
         // $('input').change(function () {
@@ -332,8 +330,16 @@
 
         function btn_orderfinished() {
             window.location.href = 'group_orderfinished.html';
-
         }
+
+        $("input").prop("checked", true);
+        $('input').change(function () {
+            $(`input[name='${this.id}']`).prop('checked', this.checked);
+            $(`input[id='${this.name}']`)
+                .prop('checked',
+                    $(`input[name='${this.name}']`).length ==
+                    $(`input[name='${this.name}']:checked`).length)
+        })
     </script>
 
 </body>
