--- a/index_list/shoppingchar.html
+++ b/index_list/shoppingchar.html
@@ -53,65 +53,68 @@
                         <tbody>
                             <tr class="tr_title">
                                 <td colspan="7">
-                                    <h5>餐廳名稱</h5>
+                                    <h5>aqua水相餐廳</h5>
                                 </td>
                             </tr>
 
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
-                                    <span id="ordername" class="ordername">餐點名</span>
+                                    <span id="ordername" class="ordername">西西里海鹽柴魚脆薯</span>
                                 </td>
                                 <td>
-                                    <span>$123</span>
+                                    <span class="price">$188</span>
                                 </td>
                                 <td>
 
                                     <span class="qty-squre">
-                                        <input id="qtyminus" type="button" value="-" class="qty-btn">
+                                        <input id="qtyminus" type="button" value="-" class="qty-btn sub"
+                                            onclick="qty()">
                                         <input type="text" value="1" class="qty" name="quantity">
-                                        <input id="qtyplus" type="button" value="+" class="qty-btn">
+                                        <input id="qtyplus" type="button" value="+" class="qty-btn add" onclick="qty()">
                                     </span>
                                 </td>
                                 <td>
-                                    <span>$1234</span>
+                                    <span id="sum">$188</span>
                                 </td>
                                 <td class="delete-shopping">
                                     <span>刪除</span>
                                 </td>
                             </tr>
-                            <!-- <tr class="shopping-row" id="shopping-row">
+                            <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail" alt="">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
-                                    <span id="ordername" class="ordername">餐點名</span>
+                                    <span id="ordername" class="ordername">番茄羅勒起司搭頂級陳年油醋</span>
                                 </td>
                                 <td>
-                                    <span>$123</span>
+                                    <span class="price">$188</span>
                                 </td>
                                 <td>
                                     <span class="qty-squre">
                                         <input id="qtyminus" type="button" value="-" class="qty-btn">
-                                        <input type="text" value="1" class="qty" name="quantity">
+                                        <input type="text" value="2" class="qty" name="quantity">
                                         <input id="qtyplus" type="button" value="+" class="qty-btn">
                                     </span>
                                 </td>
                                 <td>
-                                    <span>$1234</span>
+                                    <span>$376</span>
                                 </td>
                                 <td class="delete-shopping">
                                     <span>刪除</span>
                                 </td>
-                            </tr> -->
+                            </tr>
 
                             <!-- <tr class="shopping-row" id="shopping-row">
                                 <td>
@@ -179,9 +182,11 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -198,9 +203,11 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -217,9 +224,11 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -236,9 +245,11 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -255,9 +266,11 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -267,7 +280,7 @@
                                             <input type="text" value="1" class="qty" name="quantity">
                                             <input id="qtyplus" type="button" value="+" class="qty-btn">
                                         </span>
-                                        <span class="mobile_span">總額:$1234</span>
+                                        <span class="mobile_span">總額:$564</span>
                                     </div>
                                     <div class="mobile_delete">
                                         <button>刪除</button>
@@ -285,7 +298,7 @@
                         <span class="media-body">全選</span>
                     </label>
                     <p>
-                        <b>總金額(3個商品)$1234</b>
+                        <b id="allsum">總金額(3個商品):$564</b>
                     </p>
                     <a href="shoppingok.html">
                         <button class="buy-btn">
@@ -315,7 +328,14 @@
                     var num = Number(this.previousElementSibling.value);
                     num++;
                     this.previousElementSibling.value = num;
-                    // var price = this.previousElementSibling.previousElementSibling.previousElementSibling.firstElementChild.innerHTML;
+                    // var price = document.getElementsByClassName("price")[0].part.innerHTML;
+                    var sum = 188 * num;
+                    document.getElementById('sum').innerHTML = '$' + sum;
+                    var sum_1 = document.getElementById('sum').innerHTML;
+                    // var all_sum = sum_1.substring + 188
+                    // document.getElementById('allsum').innerHTML = '總金額(3個商品):' + all_sum;
+                    // list.getElementsByClassName("child")[0].innerHTML = "Milk";
+                    // var price = .innerHTML;
                     // this.nextElementSibling.firstElementChild.innerHTML = price * num;
                 }
             }
@@ -326,15 +346,24 @@
                         num--;
                     }
                     this.nextElementSibling.value = num;
+                    var sum = 188 * num;
+                    document.getElementById('sum').innerHTML = '$' + sum;
                     // var price = this.previousElementSibling.firstElementChild.innerHTML;
                     // this.nextElementSibling.nextElementSibling.nextElementSibling.firstElementChild.innerHTML = price * num;
+
+                    var sum_1 = document.getElementById('sum').innerHTML;
+                    // var all_sum = sum_1 + 188;
+                    // document.getElementById('allsum').innerHTML = '總金額(3個商品):' + all_sum;
                 }
             }
+
+
+
 
         }
 
 
-
+        $("input").prop("checked", true);
         $('input').change(function () {
             $(`input[name='${this.id}']`).prop('checked', this.checked);
             $(`input[id='${this.name}']`)
