--- a/index_list/shoppingok.html
+++ b/index_list/shoppingok.html
@@ -60,18 +60,20 @@
 
                         <tbody>
                             <!-- 餐點顯示欄位 -->
+
+
                             <tr class="shopping-row" id="shopping-row">
-                                <td class="wrapper" id="td-1" style="width: 200px;">
-                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                <td class="wrapper">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
                                     <span id="ordername" class="ordername">
-                                        餐點名
+                                        西西里海鹽柴魚脆薯
                                     </span>
                                 </td>
                                 <td>
                                     <span>
-                                        $123
+                                        $188
                                     </span>
                                 </td>
                                 <td>
@@ -81,33 +83,33 @@
                                 </td>
                                 <td>
                                     <span>
-                                        $1234
+                                        $188
                                     </span>
                                 </td>
                             </tr>
                             <!-- end of 餐點顯示欄位 -->
                             <tr class="shopping-row" id="shopping-row">
-                                <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail" alt="">
+                                <td class="wrapper" id="td-1" style="width: 200px;">
+                                    <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
                                     <span id="ordername" class="ordername">
-                                        餐點名
+                                        番茄羅勒起司搭頂級陳年油醋
                                     </span>
                                 </td>
                                 <td>
                                     <span>
-                                        $123
+                                        $188
                                     </span>
                                 </td>
                                 <td>
                                     <span>
-                                        1
+                                        2
                                     </span>
                                 </td>
                                 <td>
                                     <span>
-                                        $1234
+                                        $376
                                     </span>
                                 </td>
                             </tr>
@@ -134,7 +136,26 @@
                                 <div class="mobile_shopping_div">
                                     <div class="mobile_shopping_inline_div">
                                         <div class="mobile_shopping_img">
-                                            <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                            <img src="./img/aqua/aqua_img.jpg" class="img-fluid img-thumbnail" alt="">
+                                        </div>
+                                        <div class="mobile_shopping_text">
+                                            <span class="mobile_span">餐點名</span>
+                                            <div class="mobile_div">
+                                                <span>$188</span>
+                                                <span>x2</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="mobile_div">
+                                        <span>總額:</span>
+                                        <span>$376</span>
+                                    </div>
+                                </div>
+                                <div class="mobile_shopping_div">
+                                    <div class="mobile_shopping_inline_div">
+                                        <div class="mobile_shopping_img">
+                                            <img src="img/image_shoppingchar/imge02.jpeg"
+                                                class="img-fluid img-thumbnail" alt="">
                                         </div>
                                         <div class="mobile_shopping_text">
                                             <span class="mobile_span">餐點名</span>
@@ -152,25 +173,8 @@
                                 <div class="mobile_shopping_div">
                                     <div class="mobile_shopping_inline_div">
                                         <div class="mobile_shopping_img">
-                                            <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail" alt="">
-                                        </div>
-                                        <div class="mobile_shopping_text">
-                                            <span class="mobile_span">餐點名</span>
-                                            <div class="mobile_div">
-                                                <span>$123</span>
-                                                <span>x1</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="mobile_div">
-                                        <span>總額:</span>
-                                        <span>$1234</span>
-                                    </div>
-                                </div>
-                                <div class="mobile_shopping_div">
-                                    <div class="mobile_shopping_inline_div">
-                                        <div class="mobile_shopping_img">
-                                            <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail" alt="">
+                                            <img src="img/image_shoppingchar/imge03.jpeg"
+                                                class="img-fluid img-thumbnail" alt="">
                                         </div>
                                         <div class="mobile_shopping_text">
                                             <span class="mobile_span">餐點名</span>
@@ -182,7 +186,7 @@
                                     </div>
                                     <div class="mobile_div">
                                         <span>總額(3個商品):</span>
-                                        <span>$1234</span>
+                                        <span>$564</span>
                                     </div>
                                 </div>
                             </div>
@@ -191,11 +195,11 @@
                 </div>
 
                 <div class="all-squre" id="all-squre">
-                    <button id="buy-back-btn">回上一步</button>
+                    <button id="buy-back-btn" onclick="buy_back()">回上一步</button>
                     <p>
-                        <b>總金額(3個商品)$1234</b>
+                        <b>總額(3個商品):$564</b>
                     </p>
-                    <button id="buy-ok-btn">下訂單</button>
+                    <button id="buy-ok-btn" onclick="goto_orderfinish()">下訂單</button>
                 </div>
             </div>
         </div>
@@ -212,6 +216,14 @@
     <script>
         $(".header_page").load("header.html");
         $(".footer_page").load("footer.html");
+
+        function goto_orderfinish() {
+            window.location = "orderfinished.html";
+        }
+
+        function buy_back() {
+            window.location = "shoppingchar.html";
+        }
     </script>
 
 </body>
