--- a/index_list/order_manage.html
+++ b/index_list/order_manage.html
@@ -109,7 +109,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="mobile_td">2022-03-18</td>
+                                <td class="mobile_td">2022-02-24</td>
                                 <td class="mobile_td">aqua水相餐廳</td>
                                 <td class="mobile_td">西西里海鹽柴魚脆薯<br>蕃茄羅勒起司搭頂級陳年油醋</td>
                                 <td class="mobile_td">12:00</td>
@@ -306,8 +306,8 @@
           <!-- Modal body -->
           <div class="detail_modal_body">
             姓名：李曉明 <br />
-            手機：0900-xxxxxx <br />
-            電子郵件：email@gmail.com <br />
+            手機：0987654321<br />
+            電子郵件：askf@gmail.com<br />
             <br />
             訂餐餐點：香西西里海鹽柴魚脆薯*1 <br/>蕃茄羅勒起司搭頂級陳年油醋*2 <br/>
             訂餐餐廳：aqua水相餐廳 <br />
